# azpy

./: .gitignore  README.md  setup.cfg
azpy/: hello.py
repositoryindex/: index.html
repositoryindex/azpy/: index.html
repositoryindex/segment_utils/: index.html
src/: main.py
