
[metadata]
name = azpy
version = 0.1.0
author = F. Martins
author_email = felipsmartins@gmail.com
url = https://github.com/felipsmartins/azpy
description = azpy lib
long_description = file: README.md
license = MIT
platform = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = true
python_requires = >= 2.7, != 3.0.*, != 3.1.*, != 3.2.*
setup_requires =
    setuptools
# setuptools >=30.3.0     # minimal version for `setup.cfg`
# setuptools >=38.3.0     # version with most `setup.cfg` bugfixes
# setuptools >=46.4.0     # let's you use attr: to extract version from a module

[bdist_wheel]
universal = 1