[metadata]
name = azpy
version = 0.1.0
author = F. Martins
author_email = felipsmartins@gmail.com
url = https://github.com/felipsmartins/azpy
description = azpy lib
long_description = file: README.md
license = MIT
platform = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >= 2.7, != 3.0.*, != 3.1.*, != 3.2.*
packages = azpy

[bdist_wheel]
universal = 1